tests/More/Good/10.tig
/* empty let, embedded comment */
let
	var x:int := 0
in
	/*an empty let does not return a value */
end

