tests/More/Bad/25.tig
/* error: initializing nil expressions not constrained by record type */
let 
	var a:= nil
in
	a
end



